# rs-zip2meta2rbat

./: Cargo.toml  README.md  doc-web.sh
examples/zip2rbat/: Cargo.toml  run.sh  zip2rbat
examples/zip2rbat/src/: main.rs
src/: core.rs  lib.rs  sync.rs
