[package]
name = "rs-zip2meta2rbat"
version = "0.1.0"
edition = "2024"

description = "Transforms the metadata values of a zip to a record batch."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-zip2meta2rbat"
homepage = "https://github.com/takanoriyanagitani/rs-zip2meta2rbat"
documentation = "https://docs.rs/rs-zip2meta2rbat/latest"
keywords = ["zip", "metadata", "record-batch", "arrow", "sync"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"
cognitive_complexity = "forbid"

[dependencies.arrow]
version = "56"
default-features = false
features = [
]

[dependencies.chrono]
version = "0"
default-features = false
features = [
]

[dependencies.zip]
version = "4"
optional = true
default-features = false
features = [
	"chrono",
	"deflate",
]

[features]
default = [
	"szip",
]

szip = ["zip"]
